Table Game {
  Id integer [primary key]
  SeasonId char
  VisitorsTeamId varchar
  HomeTeamId varchar
  At datetime
}

Table Team {
  Id varchar [primary key]
  Name varchar
  State varchar
  City varchar
  Stadium varchar
  Conference char
}

Table Scalation {
   SeasonId char [primary key]
   TeamId varchar [primary key]
}

Table Season {
  Id char [primary key]
}

Table Player {
  Id integer [primary key]
  Name varchar
  BornOn date
  Position varchar
}

Table Selection {
  Id integer [primary key]
  PlayerId integer
  SeasonId char
  TeamId varchar
  Jersey integer
  Indexes {
    (PlayerId, SeasonId, TeamId) [unique]
  }
}

Table Participation {
  Id integer [primary key]
  GameId integer 
  SelectionId integer
  Quarter integer
}

Table Play {
  Id integer [primary key]
  ParticipationId integer
  Type integer
  Points Integer
  At time
}

Ref: Game.Id > Participation.GameId
Ref: Game.(SeasonId, HomeTeamId) > Scalation.(SeasonId, TeamId)
Ref: Game.(SeasonId, VisitorsTeamId) > Scalation.(SeasonId, TeamId)
Ref: Participation.Id > Play.ParticipationId
Ref: Scalation.SeasonId > Season.Id
Ref: Scalation.TeamId > Team.Id
Ref: Scalation.SeasonId > Selection.SeasonId
Ref: Scalation.TeamId > Selection.TeamId
Ref: Selection.Id > Participation.SelectionId
Ref: Player.Id > Selection.PlayerId